# [bumpversion]
# current_version = 0.0.1

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[metadata]
license_file = LICENSE

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = GetCCWarc/_version.py
versionfile_build = GetCCWarc/_version.py
tag_prefix = v
parentdir_prefix = GetCCWarc-