[bdist_wheel]
universal=0

[metadata]
name = GetCCWarc

author = Ohad Zadok

author_email = me@ohadzadok.com

summary = Easily get a web-page from stored commmoncrawl WARC files on S3

license = MIT

# description-file = README.md
long_description_content_type = Easily get a web-page from stored commmoncrawl WARC files on S3
Description-Content-Type: text/plain

#text/plain
#text/x-rst
#text/markdown

python_requires = >=3.6

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Education
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Home Automation

[options]
packages = find:

[entry_points]
console_scripts =
    GetCCWarc = GetCCWarc.__main__:main